# global-multiclass-binarization

./: CMakeLists.txt  README.md  binarization_main.cpp
demo/src/: target.txt
docs/: doxygen_config.in
image_processing/: CMakeLists.txt  image_processing_test.cpp  image_processing_unit.cpp  image_processing_unit.h
tools/: CMakeLists.txt  synthetic_image_generator.cpp
